src/Compilador/.antlr/QlangParser.java
// Generated from /home/alof/Desktop/Compiladores/qlang-q05/src/Compilador/Qlang.g4 by ANTLR 4.13.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class QlangParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, T__39=40, T__40=41, T__41=42, T__42=43, T__43=44, T__44=45, 
		T__45=46, T__46=47, T__47=48, T__48=49, T__49=50, T__50=51, T__51=52, 
		T__52=53, T__53=54, T__54=55, T__55=56, T__56=57, T__57=58, STARTPIL=59, 
		FINISHPIL=60, PIL=61, STRING=62, ID=63, BOOLEAN=64, NUMBER=65, SKIPPING=66, 
		NEWterm=67, BLOCKCOMMENT=68, SINGLECOMMENT=69;
	public static final int
		RULE_statList = 0, RULE_statementComposition = 1, RULE_statements = 2, 
		RULE_question = 3, RULE_code = 4, RULE_simpleCode = 5, RULE_questionHole = 6, 
		RULE_questionOpen = 7, RULE_questionCodeHole = 8, RULE_questionCodeOpen = 9, 
		RULE_questionColeOutput = 10, RULE_questionMultiChoice = 11, RULE_questionComposed = 12, 
		RULE_commandComposition = 13, RULE_assignment = 14, RULE_term = 15, RULE_command = 16, 
		RULE_variableDeclaration = 17, RULE_ifLineSentence = 18, RULE_ifBlock = 19, 
		RULE_elseifBlock = 20, RULE_elseBlock = 21, RULE_execution = 22, RULE_export = 23, 
		RULE_exportedlocation = 24, RULE_codeholeComposition = 25, RULE_codehole = 26;
	private static String[] makeRuleNames() {
		return new String[] {
			"statList", "statementComposition", "statements", "question", "code", 
			"simpleCode", "questionHole", "questionOpen", "questionCodeHole", "questionCodeOpen", 
			"questionColeOutput", "questionMultiChoice", "questionComposed", "commandComposition", 
			"assignment", "term", "command", "variableDeclaration", "ifLineSentence", 
			"ifBlock", "elseifBlock", "elseBlock", "execution", "export", "exportedlocation", 
			"codeholeComposition", "codehole"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "';'", "'code'", "'is'", "'end'", "'println'", "'text('", "')'", 
			"'print'", "'hole'", "'open'", "'code-hole'", "'code-open'", "'code-output'", 
			"'multi-choice'", "'composed'", "':='", "'new'", "'->'", "'('", "'|'", 
			"'-'", "'+'", "'not'", "'*'", "':'", "'%'", "'='", "'>='", "'<='", "'>'", 
			"'<'", "'/='", "'and'", "'or'", "'xor'", "'implies'", "'and then'", "'or else'", 
			"'/'", "'read'", "'integer'", "'real'", "'text'", "'question'", "'fraction'", 
			"'|program'", "'uses code from '", "'uses code '", "'choice'", "','", 
			"'if'", "'then'", "'elseif'", "'else'", "'execute'", "'export'", "'to'", 
			"'line'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, "STARTPIL", 
			"FINISHPIL", "PIL", "STRING", "ID", "BOOLEAN", "NUMBER", "SKIPPING", 
			"NEWterm", "BLOCKCOMMENT", "SINGLECOMMENT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Qlang.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public QlangParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StatListContext extends ParserRuleContext {
		public StatementCompositionContext statementComposition() {
			return getRuleContext(StatementCompositionContext.class,0);
		}
		public TerminalNode EOF() { return getToken(QlangParser.EOF, 0); }
		public StatListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statList; }
	}

	public final StatListContext statList() throws RecognitionException {
		StatListContext _localctx = new StatListContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_statList);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(54);
			statementComposition();
			setState(55);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StatementCompositionContext extends ParserRuleContext {
		public List<StatementsContext> statements() {
			return getRuleContexts(StatementsContext.class);
		}
		public StatementsContext statements(int i) {
			return getRuleContext(StatementsContext.class,i);
		}
		public StatementCompositionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statementComposition; }
	}

	public final StatementCompositionContext statementComposition() throws RecognitionException {
		StatementCompositionContext _localctx = new StatementCompositionContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_statementComposition);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(62);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(57);
					statements();
					setState(58);
					match(T__0);
					}
					} 
				}
				setState(64);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			}
			{
			setState(65);
			statements();
			setState(67);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__0) {
				{
				setState(66);
				match(T__0);
				}
			}

			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StatementsContext extends ParserRuleContext {
		public StatementsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statements; }
	 
		public StatementsContext() { }
		public void copyFrom(StatementsContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class CodeOrderContext extends StatementsContext {
		public CodeContext code() {
			return getRuleContext(CodeContext.class,0);
		}
		public CodeOrderContext(StatementsContext ctx) { copyFrom(ctx); }
	}
	@SuppressWarnings("CheckReturnValue")
	public static class DeclarationOrderContext extends StatementsContext {
		public VariableDeclarationContext variableDeclaration() {
			return getRuleContext(VariableDeclarationContext.class,0);
		}
		public DeclarationOrderContext(StatementsContext ctx) { copyFrom(ctx); }
	}
	@SuppressWarnings("CheckReturnValue")
	public static class AssignmentOrderContext extends StatementsContext {
		public AssignmentContext assignment() {
			return getRuleContext(AssignmentContext.class,0);
		}
		public AssignmentOrderContext(StatementsContext ctx) { copyFrom(ctx); }
	}
	@SuppressWarnings("CheckReturnValue")
	public static class QuestionOrderContext extends StatementsContext {
		public QuestionContext question() {
			return getRuleContext(QuestionContext.class,0);
		}
		public QuestionOrderContext(StatementsContext ctx) { copyFrom(ctx); }
	}
	@SuppressWarnings("CheckReturnValue")
	public static class ExportOrderContext extends StatementsContext {
		public ExportContext export() {
			return getRuleContext(ExportContext.class,0);
		}
		public ExportOrderContext(StatementsContext ctx) { copyFrom(ctx); }
	}
	@SuppressWarnings("CheckReturnValue")
	public static class SimpleCodeOrderContext extends StatementsContext {
		public SimpleCodeContext simpleCode() {
			return getRuleContext(SimpleCodeContext.class,0);
		}
		public SimpleCodeOrderContext(StatementsContext ctx) { copyFrom(ctx); }
	}
	@SuppressWarnings("CheckReturnValue")
	public static class ExecutionOrderContext extends StatementsContext {
		public ExecutionContext execution() {
			return getRuleContext(ExecutionContext.class,0);
		}
		public ExecutionOrderContext(StatementsContext ctx) { copyFrom(ctx); }
	}

	public final StatementsContext statements() throws RecognitionException {
		StatementsContext _localctx = new StatementsContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_statements);
		try {
			setState(76);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				_localctx = new QuestionOrderContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(69);
				question();
				}
				break;
			case 2:
				_localctx = new DeclarationOrderContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(70);
				variableDeclaration();
				}
				break;
			case 3:
				_localctx = new AssignmentOrderContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(71);
				assignment();
				}
				break;
			case 4:
				_localctx = new ExecutionOrderContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(72);
				execution();
				}
				break;
			case 5:
				_localctx = new ExportOrderContext(_localctx);
				enterOuterAlt(_localctx, 5);
				{
				setState(73);
				export();
				}
				break;
			case 6:
				_localctx = new CodeOrderContext(_localctx);
				enterOuterAlt(_localctx, 6);
				{
				setState(74);
				code();
				}
				break;
			case 7:
				_localctx = new SimpleCodeOrderContext(_localctx);
				enterOuterAlt(_localctx, 7);
				{
				setState(75);
				simpleCode();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class QuestionContext extends ParserRuleContext {
		public QuestionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_question; }
	 
		public QuestionContext() { }
		public void copyFrom(QuestionContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class HoleContext extends QuestionContext {
		public QuestionHoleContext questionHole() {
			return getRuleContext(QuestionHoleContext.class,0);
		}
		public HoleContext(QuestionContext ctx) { copyFrom(ctx); }
	}
	@SuppressWarnings("CheckReturnValue")
	public static class CodeHoleContext extends QuestionContext {
		public QuestionCodeHoleContext questionCodeHole() {
			return getRuleContext(QuestionCodeHoleContext.class,0);
		}
		public CodeHoleContext(QuestionContext ctx) { copyFrom(ctx); }
	}
	@SuppressWarnings("CheckReturnValue")
	public static class ComposedContext extends QuestionContext {
		public QuestionComposedContext questionComposed() {
			return getRuleContext(QuestionComposedContext.class,0);
		}
		public ComposedContext(QuestionContext ctx) { copyFrom(ctx); }
	}
	@SuppressWarnings("CheckReturnValue")
	public static class CodeOpenContext extends QuestionContext {
		public QuestionCodeOpenContext questionCodeOpen() {
			return getRuleContext(QuestionCodeOpenContext.class,0);
		}
		public CodeOpenContext(QuestionContext ctx) { copyFrom(ctx); }
	}
	@SuppressWarnings("CheckReturnValue")
	public static class MultichoiceContext extends QuestionContext {
		public QuestionMultiChoiceContext questionMultiChoice() {
			return getRuleContext(QuestionMultiChoiceContext.class,0);
		}
		public MultichoiceContext(QuestionContext ctx) { copyFrom(ctx); }
	}
	@SuppressWarnings("CheckReturnValue")
	public static class ColeOutputContext extends QuestionContext {
		public QuestionColeOutputContext questionColeOutput() {
			return getRuleContext(QuestionColeOutputContext.class,0);
		}
		public ColeOutputContext(QuestionContext ctx) { copyFrom(ctx); }
	}
	@SuppressWarnings("CheckReturnValue")
	public static class OpenContext extends QuestionContext {
		public QuestionOpenContext questionOpen() {
			return getRuleContext(QuestionOpenContext.class,0);
		}
		public OpenContext(QuestionContext ctx) { copyFrom(ctx); }
	}

	public final QuestionContext question() throws RecognitionException {
		QuestionContext _localctx = new QuestionContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_question);
		try {
			setState(85);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__8:
				_localctx = new HoleContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(78);
				questionHole();
				}
				break;
			case T__9:
				_localctx = new OpenContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(79);
				questionOpen();
				}
				break;
			case T__10:
				_localctx = new CodeHoleContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(80);
				questionCodeHole();
				}
				break;
			case T__11:
				_localctx = new CodeOpenContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(81);
				questionCodeOpen();
				}
				break;
			case T__12:
				_localctx = new ColeOutputContext(_localctx);
				enterOuterAlt(_localctx, 5);
				{
				setState(82);
				questionColeOutput();
				}
				break;
			case T__13:
				_localctx = new MultichoiceContext(_localctx);
				enterOuterAlt(_localctx, 6);
				{
				setState(83);
				questionMultiChoice();
				}
				break;
			case T__14:
				_localctx = new ComposedContext(_localctx);
				enterOuterAlt(_localctx, 7);
				{
				setState(84);
				questionComposed();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CodeContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(QlangParser.ID, 0); }
		public List<TerminalNode> PIL() { return getTokens(QlangParser.PIL); }
		public TerminalNode PIL(int i) {
			return getToken(QlangParser.PIL, i);
		}
		public List<AssignmentContext> assignment() {
			return getRuleContexts(AssignmentContext.class);
		}
		public AssignmentContext assignment(int i) {
			return getRuleContext(AssignmentContext.class,i);
		}
		public CodeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_code; }
	}

	public final CodeContext code() throws RecognitionException {
		CodeContext _localctx = new CodeContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_code);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(87);
			match(T__1);
			setState(88);
			match(ID);
			setState(89);
			match(T__2);
			setState(94); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(90);
				match(PIL);
				setState(92);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==ID) {
					{
					setState(91);
					assignment();
					}
				}

				}
				}
				setState(96); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==PIL );
			setState(98);
			match(T__3);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SimpleCodeContext extends ParserRuleContext {
		public List<TerminalNode> STRING() { return getTokens(QlangParser.STRING); }
		public TerminalNode STRING(int i) {
			return getToken(QlangParser.STRING, i);
		}
		public List<TerminalNode> ID() { return getTokens(QlangParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(QlangParser.ID, i);
		}
		public SimpleCodeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_simpleCode; }
	}

	public final SimpleCodeContext simpleCode() throws RecognitionException {
		SimpleCodeContext _localctx = new SimpleCodeContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_simpleCode);
		try {
			int _alt;
			setState(122);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__4:
				enterOuterAlt(_localctx, 1);
				{
				setState(100);
				match(T__4);
				setState(108);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,7,_ctx);
				while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						setState(106);
						_errHandler.sync(this);
						switch (_input.LA(1)) {
						case STRING:
							{
							setState(101);
							match(STRING);
							}
							break;
						case ID:
							{
							setState(102);
							match(ID);
							}
							break;
						case T__5:
							{
							{
							setState(103);
							match(T__5);
							setState(104);
							match(ID);
							setState(105);
							match(T__6);
							}
							}
							break;
						default:
							throw new NoViableAltException(this);
						}
						} 
					}
					setState(110);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,7,_ctx);
				}
				}
				break;
			case T__7:
				enterOuterAlt(_localctx, 2);
				{
				setState(111);
				match(T__7);
				setState(119);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,9,_ctx);
				while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						setState(117);
						_errHandler.sync(this);
						switch (_input.LA(1)) {
						case STRING:
							{
							setState(112);
							match(STRING);
							}
							break;
						case ID:
							{
							setState(113);
							match(ID);
							}
							break;
						case T__5:
							{
							{
							setState(114);
							match(T__5);
							setState(115);
							match(ID);
							setState(116);
							match(T__6);
							}
							}
							break;
						default:
							throw new NoViableAltException(this);
						}
						} 
					}
					setState(121);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,9,_ctx);
				}
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class QuestionHoleContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(QlangParser.ID, 0); }
		public CommandCompositionContext commandComposition() {
			return getRuleContext(CommandCompositionContext.class,0);
		}
		public QuestionHoleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_questionHole; }
	}

	public final QuestionHoleContext questionHole() throws RecognitionException {
		QuestionHoleContext _localctx = new QuestionHoleContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_questionHole);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(124);
			match(T__8);
			setState(125);
			match(ID);
			setState(126);
			match(T__2);
			setState(127);
			commandComposition();
			setState(128);
			match(T__3);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class QuestionOpenContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(QlangParser.ID, 0); }
		public CommandCompositionContext commandComposition() {
			return getRuleContext(CommandCompositionContext.class,0);
		}
		public QuestionOpenContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_questionOpen; }
	}

	public final QuestionOpenContext questionOpen() throws RecognitionException {
		QuestionOpenContext _localctx = new QuestionOpenContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_questionOpen);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(130);
			match(T__9);
			setState(131);
			match(ID);
			setState(132);
			match(T__2);
			setState(133);
			commandComposition();
			setState(134);
			match(T__3);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class QuestionCodeHoleContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(QlangParser.ID, 0); }
		public CommandCompositionContext commandComposition() {
			return getRuleContext(CommandCompositionContext.class,0);
		}
		public QuestionCodeHoleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_questionCodeHole; }
	}

	public final QuestionCodeHoleContext questionCodeHole() throws RecognitionException {
		QuestionCodeHoleContext _localctx = new QuestionCodeHoleContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_questionCodeHole);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(136);
			match(T__10);
			setState(137);
			match(ID);
			setState(138);
			match(T__2);
			setState(139);
			commandComposition();
			setState(140);
			match(T__3);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class QuestionCodeOpenContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(QlangParser.ID, 0); }
		public CommandCompositionContext commandComposition() {
			return getRuleContext(CommandCompositionContext.class,0);
		}
		public QuestionCodeOpenContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_questionCodeOpen; }
	}

	public final QuestionCodeOpenContext questionCodeOpen() throws RecognitionException {
		QuestionCodeOpenContext _localctx = new QuestionCodeOpenContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_questionCodeOpen);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(142);
			match(T__11);
			setState(143);
			match(ID);
			setState(144);
			match(T__2);
			setState(145);
			commandComposition();
			setState(146);
			match(T__3);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class QuestionColeOutputContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(QlangParser.ID, 0); }
		public CommandCompositionContext commandComposition() {
			return getRuleContext(CommandCompositionContext.class,0);
		}
		public QuestionColeOutputContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_questionColeOutput; }
	}

	public final QuestionColeOutputContext questionColeOutput() throws RecognitionException {
		QuestionColeOutputContext _localctx = new QuestionColeOutputContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_questionColeOutput);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(148);
			match(T__12);
			setState(149);
			match(ID);
			setState(150);
			match(T__2);
			setState(151);
			commandComposition();
			setState(152);
			match(T__3);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class QuestionMultiChoiceContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(QlangParser.ID, 0); }
		public CommandCompositionContext commandComposition() {
			return getRuleContext(CommandCompositionContext.class,0);
		}
		public QuestionMultiChoiceContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_questionMultiChoice; }
	}

	public final QuestionMultiChoiceContext questionMultiChoice() throws RecognitionException {
		QuestionMultiChoiceContext _localctx = new QuestionMultiChoiceContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_questionMultiChoice);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(154);
			match(T__13);
			setState(155);
			match(ID);
			setState(156);
			match(T__2);
			setState(157);
			commandComposition();
			setState(158);
			match(T__3);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class QuestionComposedContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(QlangParser.ID, 0); }
		public CommandCompositionContext commandComposition() {
			return getRuleContext(CommandCompositionContext.class,0);
		}
		public QuestionComposedContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_questionComposed; }
	}

	public final QuestionComposedContext questionComposed() throws RecognitionException {
		QuestionComposedContext _localctx = new QuestionComposedContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_questionComposed);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(160);
			match(T__14);
			setState(161);
			match(ID);
			setState(162);
			match(T__2);
			setState(163);
			commandComposition();
			setState(164);
			match(T__3);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
